# errsight-py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/errsight/: __init__.py  aws_lambda.py  backtrace.py  celery.py  configuration.py  django.py  fastapi.py  flask.py  hub.py  logging_handler.py  rq.py  scope.py  source_context.py  starlette.py  transport.py
tests/: _django_urls.py  conftest.py  test_aws_lambda.py  test_backtrace.py  test_capture_integration.py  test_celery_integration.py  test_django_async_middleware.py  test_django_middleware.py  test_flask_integration.py  test_hub.py  test_logging_handler.py  test_rq_integration.py  test_scope.py  test_scope_integration.py  test_smoke.py  test_source_context.py  test_starlette_integration.py  test_walking_skeleton.py
